added full name to register
